--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -31,8 +31,13 @@
                   required>
                 </div>
                 <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Login</button>
+                <br>
+                <div class="error" [hidden]="!inputEmailLogin.hasError('incorrect')">
+                  Error: Email or password not matching!
+                </div>
               </form>
+              <br>
+              <a class="nav-link" [routerLink]="'/register'" routerLinkActive="active">Register new account</a>
         </div>
     </div>
 </div>
-
