--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -71,41 +71,6 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputAddressRegister">Address</label>
-                    <input 
-                    type="text" 
-                    class="form-control" 
-                    name="inputAddressRegister" 
-                    ngModel 
-                    #inputAddressRegister="ngModel" 
-                    id="inputAddressRegister" 
-                    placeholder="Address">
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-sm-12 col-md-6">
-                        <label for="inputPhoneRegister">Phone</label>
-                        <input 
-                        type="tel" 
-                        class="form-control" 
-                        name="inputPhoneRegister" 
-                        ngModel 
-                        #inputPhoneRegister="ngModel" 
-                        id="inputPhoneRegister" 
-                        placeholder="Phone">
-                    </div>
-                    <div class="form-group col-sm-12 col-md-6">
-                        <label for="inputPhone2Register">Second Phone</label>
-                        <input 
-                        type="tel" 
-                        class="form-control" 
-                        name="inputPhone2Register" 
-                        ngModel 
-                        #inputPhone2Register="ngModel" 
-                        id="inputPhone2Register" 
-                        placeholder="Second Phone">
-                    </div>
-                </div>
-                <div class="form-group">
                     <label for="inputServicesRegister">Services*</label>
                     <select multiple 
                     class="form-control"
@@ -120,7 +85,16 @@
                     </select>
                   </div>
                 <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Register</button>
+                <br>
+                <div class="error" [hidden]="!inputEmailRegister.hasError('incorrect')">
+                  Error: Error incorrect information!
+                </div>
+                <div class="success">
+                    {{ msg }}
+                </div>
               </form>
+              <br>
+              <a class="nav-link" [routerLink]="'/register'" routerLinkActive="active">Go back to log in</a>
         </div>
     </div>
 </div>
