--- a/src/app/auth/components/register/register.component.scss
+++ b/src/app/auth/components/register/register.component.scss
@@ -6,3 +6,13 @@
     float: none;
     margin: 0 auto;
 }
+
+.error{
+    color: red;
+}
+
+.success {
+    color: green;
+    margin-top: 10px;
+    font-weight: bold;
+}
