--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -37,7 +37,7 @@
                 </div>
               </form>
               <br>
-              <a class="nav-link" [routerLink]="'/register'" routerLinkActive="active">Register new account</a>
+              <a class="nav-link" [routerLink]="'/supporter/register'" routerLinkActive="active">Register new account</a>
         </div>
     </div>
 </div>
