--- a/src/app/supporter-page/components/supporter-issues-list/supporter-issues-list.component.html
+++ b/src/app/supporter-page/components/supporter-issues-list/supporter-issues-list.component.html
@@ -13,45 +13,24 @@
                 data-pagination="true">
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Service</th>
+                    <th scope="col">Report #</th>
+                    <th scope="col">Classification</th>
+                    <th scope="col">Reported At</th>
                     <th scope="col">Status</th>
+                    <th scope="col">Supporter</th>
                     <th scope="col">Operations</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores</td>
-                    <td>Service 1</td>
-                    <td>Open</td>
+
+                  <tr *ngFor="let issue of servicesList">
+                    <th scope="row">{{ issue.ReportNumber }}</th>
+                    <td>{{ issue.Classification }}</td>
+                    <td>{{ issue.RaportTimestamp }}</td>
+                    <td>{{ issue.Status }}</td>
+                    <td>{{ issue.SupporterId }}</td>
                     <td>
-                        <a href="/view-issue/1" class="btn btn-info mb-1">View</a><br>
-                        <a href="/update-issue/1" class="btn btn-primary mb-1">Edit</a><br>
-                        <a href="/delete-issue/1" class="btn btn-danger">Delete</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores</td>
-                    <td>Service 2</td>
-                    <td>Closed</td>
-                    <td>
-                        <a href="/view-issue/1" class="btn btn-info mb-1">View</a><br>
-                        <a href="/update-issue/1" class="btn btn-primary mb-1">Edit</a><br>
-                        <a href="/delete-issue/1" class="btn btn-danger">Delete</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores</td>
-                    <td>Service 3</td>
-                    <td>Reviewing</td>
-                    <td>
-                        <a href="/view-issue/1" class="btn btn-info mb-1">View</a><br>
-                        <a href="/update-issue/1" class="btn btn-primary mb-1">Edit</a><br>
-                        <a href="/delete-issue/1" class="btn btn-danger">Delete</a>
+                        <a href="/supporter/view-issue/{{ issue.id }}" class="btn btn-info mb-1">View</a>
                     </td>
                   </tr>
                 </tbody>
