Client login and issue creation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive" *ngIf="userId && userRole == 'client'">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/issues'" routerLinkActive="active">My Issues</a>
+            <a class="nav-link" [routerLink]="'/issues-list'" routerLinkActive="active">My Issues</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="'/create-issue'" routerLinkActive="active">Create Issue</a>
