--- a/src/app/auth/components/client-login/client-login.component.html
+++ b/src/app/auth/components/client-login/client-login.component.html
@@ -1,8 +1,7 @@
 <div class="row login-comp">
     <div class="col-md-5 col-centered">
         <div class="col-md-12">
-            <h1>Help Desk</h1>
-            <h2>Supporter Login</h2>
+            <h1>Login on Help Desk</h1>
         </div>
         <br>
         <div class="col-md-12">
@@ -38,7 +37,7 @@
                 </div>
               </form>
               <br>
-              <a class="nav-link" [routerLink]="'/supporter/register'" routerLinkActive="active">Register new account</a>
+              <a class="nav-link" [routerLink]="'/register'" routerLinkActive="active">Register new account</a>
         </div>
     </div>
 </div>
