--- a/src/app/client-page/components/create-issue/create-issue.component.html
+++ b/src/app/client-page/components/create-issue/create-issue.component.html
@@ -47,29 +47,23 @@
                 </div>
                 <div class="form-group">
                     <label for="addressIssue">Reference Address</label>
-                    <input 
-                    type="text" 
+                    <textarea 
+                    rows="2" 
                     class="form-control" 
                     name="addressIssue" 
                     ngModel 
                     #addressIssue="ngModel" 
                     id="addressIssue" 
-                    placeholder="Address">
+                    placeholder="Address"></textarea>
                 </div>
-                <div class="form-group">
-                    <label for="servicesIssue">Services*</label>
-                    <select multiple
-                    class="form-control"
-                    name="servicesIssue" 
-                    ngModel 
-                    #servicesIssue="ngModel" 
-                    id="servicesIssue">
-                      <option value="s1">service 1</option>
-                      <option value="s2">service 2</option>
-                      <option value="s3">service 3</option>
-                    </select>
-                  </div>
                 <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Save</button>
+                <br>
+                <div class="error" [hidden]="!descriptionIssue.hasError('incorrect')">
+                    Error: Error incorrect information!
+                  </div>
+                  <div class="success">
+                      {{ msg }}
+                  </div>
             </form>
         </div>
     </div>
