Add client comments functionality.

--- a/src/app/client-page/components/issues-list/issues-list.component.html
+++ b/src/app/client-page/components/issues-list/issues-list.component.html
@@ -1,61 +1,40 @@
 
 <div class="row extra-margins">
-    <div class="col-md-12">
-        <div class="col-md-12">
-            <h1>My issues list</h1>
-        </div>
-        <br>
-        <div class="col-md-12">
-            <table 
-                class="table"
-                id="issues-list-table"
-                data-toggle="table"
-                data-pagination="true">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Service</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Operations</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores</td>
-                    <td>Service 1</td>
-                    <td>Open</td>
-                    <td>
-                        <a href="/view-issue/1" class="btn btn-info mb-1">View</a><br>
-                        <a href="/update-issue/1" class="btn btn-primary mb-1">Edit</a><br>
-                        <a href="/delete-issue/1" class="btn btn-danger">Delete</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores</td>
-                    <td>Service 2</td>
-                    <td>Closed</td>
-                    <td>
-                        <a href="/view-issue/1" class="btn btn-info mb-1">View</a><br>
-                        <a href="/update-issue/1" class="btn btn-primary mb-1">Edit</a><br>
-                        <a href="/delete-issue/1" class="btn btn-danger">Delete</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores</td>
-                    <td>Service 3</td>
-                    <td>Reviewing</td>
-                    <td>
-                        <a href="/view-issue/1" class="btn btn-info mb-1">View</a><br>
-                        <a href="/update-issue/1" class="btn btn-primary mb-1">Edit</a><br>
-                        <a href="/delete-issue/1" class="btn btn-danger">Delete</a>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
-    </div>
+  <div class="col-md-12">
+      <div class="col-md-12">
+          <h1>My Issues list</h1>
+      </div>
+      <br>
+      <div class="col-md-12">
+          <table 
+              class="table"
+              id="issues-list-table"
+              data-toggle="table"
+              data-pagination="true">
+              <thead>
+                <tr>
+                  <th scope="col">Report #</th>
+                  <th scope="col">Reported Date</th>
+                  <th scope="col">Description</th>
+                  <th scope="col">Services</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Operations</th>
+                </tr>
+              </thead>
+              <tbody>
+
+                <tr *ngFor="let issue of issuesList">
+                  <th scope="row">{{ issue.reportNumber }}</th>
+                  <td>{{ issue.registedtimestamp }}</td>
+                  <td>{{ issue.description }}</td>
+                  <td>--</td>
+                  <td>{{ issue.status }}</td>
+                  <td>
+                      <a href="/view-issue/{{ issue.id }}" class="btn btn-info mb-1">View</a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+      </div>
+  </div>
 </div>
