--- a/src/app/supporter-page/components/supporter-issues-list/supporter-issues-list.component.html
+++ b/src/app/supporter-page/components/supporter-issues-list/supporter-issues-list.component.html
@@ -23,7 +23,7 @@
                 </thead>
                 <tbody>
 
-                  <tr *ngFor="let issue of servicesList">
+                  <tr *ngFor="let issue of issuesList">
                     <th scope="row">{{ issue.ReportNumber }}</th>
                     <td>{{ issue.Classification }}</td>
                     <td>{{ issue.RaportTimestamp }}</td>
