--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top" >
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark fixed-top" [ngClass]="{'bg-info': userRole == 'client', 'bg-dark': userRole == 'supporter', 'bg-secondary': userRole == 'supervisor'}">
     <div class="container">
       <a class="navbar-brand" href="index.html">Help Desk</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
