--- a/src/app/auth/components/client-register/client-register.component.html
+++ b/src/app/auth/components/client-register/client-register.component.html
@@ -94,8 +94,7 @@
                         ngModel 
                         #inputEmailRegister="ngModel" 
                         id="inputPhoneRegister" 
-                        placeholder="88888888" 
-                        required>
+                        placeholder="88888888">
                     </div>
                     <div class="form-group col-sm-12 col-md-6">
                         <label for="inputPhone2Register">Second Phone</label>
@@ -106,8 +105,7 @@
                         ngModel 
                         #inputPhone2Register="ngModel" 
                         id="inputPhone2Register" 
-                        placeholder="88888888"
-                        required>
+                        placeholder="88888888">
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Register</button>
